# GOC-IO

./: .gitignore  README.MD  pyproject.toml
src/GOC_IO/: __init__.py  main.py  matpower.py  parser_con.py  parser_inl.py  parser_raw.py  parser_rop.py
tests/: runtests.py
